[package]
name = "lsystems-core"
version = "0.2.3"
authors = ["nshcat <nshcat@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default			= [ ]
serde-serialize = [ "serde", "serde_derive" ]

[dependencies]
nalgebra 		= { version = "0.19.0", features = [ "serde-serialize" ] }
rand 			= "0.7.2"
peg 			= "0.6.0"
serde          	= { version = "1.0", optional = true }
serde_derive   	= { version = "1.0", optional = true }
